[gd_scene load_steps=2 format=3 uid="uid://d2xy5bpux3jqb"]

[ext_resource type="Script" uid="uid://dk2i41fm6qpud" path="res://scenes/startup/startup.gd" id="1_816ki"]

[node name="Startup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_816ki")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.27258, 0.27258, 0.27258, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 200.0
offset_right = 120.0
offset_bottom = 285.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 120
text = "GAME_NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewGame" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -204.0
offset_top = -400.0
offset_right = 204.0
offset_bottom = -252.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 100
text = "NEW_GAME"

[node name="Settings" type="Popup" parent="."]
initial_position = 1
size = Vector2i(1000, 1000)
visible = true

[node name="Language" type="OptionButton" parent="Settings"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = 38.0
offset_right = 16.0
offset_bottom = 58.0
grow_horizontal = 2
selected = 0
item_count = 2
popup/item_0/text = "中文"
popup/item_0/id = 0
popup/item_1/text = "English"
popup/item_1/id = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Settings"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.0
offset_top = -104.0
offset_right = 78.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="Confirm" type="Button" parent="Settings/HBoxContainer"]
layout_mode = 2
text = "CONFIRM"

[node name="Cancel" type="Button" parent="Settings/HBoxContainer"]
layout_mode = 2
text = "CANCEL"

[connection signal="pressed" from="NewGame" to="." method="_on_start_pressed"]
[connection signal="item_selected" from="Settings/Language" to="." method="_on_language_item_selected"]
